# final-project

./: README.md  academic report.gitignore.docx  main.py  main_1.py  main_2.py  my_project.code-workspace  pyproject.toml
data/: cleaned_after_processing.xlsx
data/1. initial_subjects_data/: error_data.csv  non_state_subject.csv  subject_1.csv  subject_2.csv  subject_3.csv
data/2. passed_screening_data/: non_state_subject.csv  subject_1.csv  subject_2.csv  subject_3.csv
data/3. passed_process_data/: passed_process_data.csv
data/4. data_ready_for_analysis/: ready_for_analysis.xlsx
src/: data_analysis.py  data_process_code.py  new_predicted_state.py  screening_code.py
tests/: test_data_process.py  test_predicted_state.py  test_screening_code.py
