[tool.poetry]
name = "eeg-processing-project"
version = "1.0.0"
description = "A project for processing EEG data including resampling, EMA calculation, outlier removal, and visualization."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.2"
pandas = "^1.3.3"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
scikit-learn = "^0.24.2"  # added for RandomForestClassifier and other ML tools
openpyxl = "^3.0.7"  # added for reading Excel files

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
unittest = "^3.8"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
numpy = "^1.21.2"
seaborn = "^0.11.2"  # added for advanced visualization
